better drag & drop, fix search input overflow

--- a/frontend/app/src/pages/MainPage/components/PasswordListView/PasswordListView.less
+++ b/frontend/app/src/pages/MainPage/components/PasswordListView/PasswordListView.less
@@ -65,9 +65,11 @@
             border-radius: var(--radius);
             gap: 5px;
             padding-left: 7px;
+            overflow: hidden;
 
             & > input {
                 font-size: 12px;
+                min-width: 0;
             }
             & > svg {
                 width: 18px;
