--- a/frontend/app/src/pages/MainPage/components/SideBar/components/Category.less
+++ b/frontend/app/src/pages/MainPage/components/SideBar/components/Category.less
@@ -20,6 +20,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         word-break: break-word;
+        pointer-events: none;
     }
     & input {
         padding: 3px 0;
@@ -36,6 +37,7 @@
         transition: width 0.1s ease-in-out;
         left: 0px;
         position: absolute;
+        pointer-events: none;
     }
     
     
@@ -60,5 +62,6 @@
     & svg {
         fill: var(--primary);
         width: 20px;
+        pointer-events: none;
     }
 }
